fix: hide line authoring on small width window(#684)
* hide git blame gutter not to superpose text for smaller screens

* refactor: use smaller width

---------

--- a/styles.css
+++ b/styles.css
@@ -549,3 +549,10 @@
     padding: 0px 6px 0px 6px;
     white-space: pre; /* Keep spaces and do not collapse them. */
 }
+
+@media(max-width:800px){
+    /* hide git blame gutter not to superpose text */
+    .cm-gutterElement.obs-git-blame-gutter {
+        display: none;
+    }
+}
